# ocrinvoice

./: .cursorrules  .flake8  .gitignore  .pre-commit-config.yaml  Centre_de_services_scolaire_des_Grandes-Seigneuries_371.23.csv  FUNCTIONAL_SPECIFICATION.md  GUI_README.md  LICENSE  La_Forfaiterie_227.94.csv  Les_Gouttières_de_lîle-aux-noix_10035.00.csv  OCRInvoiceParser-folder.spec  OCRInvoiceParser-macos.spec  OCRInvoiceParser.spec  README.md  README_BUSINESS_ALIAS.md  README_DATE_EXTRACTION.md  README_PDF_Extractor.md  REFACTOR_PLAN.md  SCOTIA_0.30.csv  SCOTIA_453.00.csv  SCOTIA_53.00.csv  SCOTIA_537.16.csv  TECHNICAL_ARCHITECTURE.md  TEST_SUITE_README.md  Unknown_0.00.csv  Unknown_2.00.csv  auto_test_data.json  banque-scotia_2.00.csv  business_alias_manager.py  business_aliases.json  compte_de_taxes_scolaire_0.00.csv  compte_de_taxes_scolaire_402.31.csv  compte_de_taxes_scolaire_5.00.csv  data.json  debug_total.py  demo_test_results.csv  example_usage.py  interactive_alias_example.py  invoice_ocr_parser.py  invoice_ocr_parser_cli.py  (+48 more)
.github/workflows/: ci.yml  release-folder.yml  release.yml
config/: business_aliases.json  business_mappings.json  business_mappings_backup_1752975474.json  business_mappings_backup_20250719_231911.json  business_mappings_v2.json  business_mappings_v2.json.shutdown_backup_20250720_115238  categories.json  categories_backup_20250720_121038.json  default_config.yaml  logging_config.yaml  projects.json
config/backups/: business_mappings_backup_20250713_214613_274.json
docs/: README.md
docs/architecture/: README.md  business_aliases_gui_spec.md  (+10 more)
examples/: advanced_usage.py  basic_usage.py  custom_parsers.py
installer/: README.md  build.bat  build_installer.py  cleanup_desktop_shortcuts.bat  create_placeholder_assets.py  create_placeholder_icon.py  download_tesseract.py  installer.nsi  tesseract-installer.nsi
scripts/: build_folder_package.py  ci_test_runner_windows.py  convert_to_new_format.py  create_release.py  demo_editable_table.py  demo_mvp.py  install_dependencies.py  install_nsis.bat  install_nsis.py  migrate_business_mappings.py  migrate_database_schema.py  migrate_to_sqlite.py  release.py  run_ci_tests.py  safe_migration.py  setup.bat  setup.sh  setup_cross_platform.py  test_editable_table.py  validate_links.py
tests/: __init__.py
(+96 files in other folders)
